# keylib

./: .gitignore  README.md  build.zig  build.zig.zon
bindings/c/include/: keylib.h  uhid.h
bindings/c/src/: client_pin.zig  credential_management.zig  keylib.zig
bindings/linux/src/: uhid-c.zig  uhid.zig
example/: authenticator.zig  client.zig
keylib-sys/: Cargo.toml  README.md  build.rs  wrapper.h
keylib-sys/examples/: authenticator.rs  authenticator_setup.rs  basic.rs  basic_enumeration.rs  client.rs  credential_management.rs  performance_demo.rs  pin_setup.rs  webauthn_authenticate.rs  webauthn_register.rs
keylib-sys/src/: authenticator.rs  callbacks.rs  client.rs  client_pin.rs  credential.rs  credential_management.rs  credentials.rs  ctaphid.rs  error.rs  lib.rs  promise.rs  uhid.rs
keylib-sys/tests/: credential_storage_test.rs  integration.rs
lib/client/: Transport.zig  Transports.zig  cbor_commands.zig
lib/client/transports/: usb.zig
lib/client/transports/ctaphid/: ctaphid.zig
lib/common/: AttestationStatement.zig  AttestedCredentialData.zig  AuthenticatorData.zig  PublicKeyCredentialDescriptor.zig  PublicKeyCredentialParameters.zig  RelyingParty.zig  User.zig
lib/ctap/auth/: Authenticator.zig  Callbacks.zig  Settings.zig
lib/ctap/commands/authenticator/: authenticatorClientPin.zig  (+6 more)
lib/ctap/extensions/: Extensions.zig  HmacSecret.zig
lib/ctap/request/: ClientPin.zig  CredentialManagement.zig  GetAssertion.zig  MakeCredential.zig
lib/ctap/response/: ClientPin.zig  CredentialManagement.zig  GetAssertion.zig  MakeCredential.zig
(+1 files in other folders)
